novo index.html

--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Links</title>
-    <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Link Bio</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link rel="stylesheet" href="style.css">
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Poppins&display=swap"
+      rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="link-bio">
-        <h1>DevDudinha</h1>
-        <p>Desenvolvedora Front-End!</p>
-        <a href="https://linkedin.com/in/maria-eduarda-de-almeida-magalh%2525C3%2525A3es-404991282?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">Linkedln</a>
-        <a href="https://www.instagram.com/devdudinha?igsh=MTJ4cWlhNHZweXJjZQ%3D%3D&utm_source=qr">Instagram</a>
-        <a href="https://github.com/devdudinha">GitHub</a>
-    <footer class="eu">
-        <p>&copy; Copyright - DevDudinha</p>
-    </footer>
-  </div>
+   <div id="container">
+      <div id="profile">
+         <img src="assents/photo_2024-01-20_02-44-52.jpg nova.jpg" alt="Avatar">
+         <h1>DevDudinha</h1>
+         <p>Desenvolvedora Front-End!</p>
+      <ul>
+         <li>
+            <a href="https://www.linkedin.com/in/maria-eduarda-de-almeida-404991282?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+               target="_blank"><ion-icon name="logo-linkedin" class="links-a"></ion-icon>Linkedln</a>
+         </li>
+
+         <li>
+            <a href="https://www.instagram.com/devdudinha?igsh=MTJ4cWlhNHZweXJjZQ%3D%3D&utm_source=qr"
+               target="_blank"><ion-icon name="logo-instagram" class="links-b"></ion-icon>Instagram</a>
+         </li>
+
+         <li>
+            <a href="https://github.com/devdudinha" target="_blank"> <ion-icon name="logo-github" class="links-c"></ion-icon>GitHub</a>
+         </li>
+      </ul>
+   </div>
+   <footer>
+      © Copryright DevDudinha
+   </footer>
+   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
+
 </html>
